2007-01-02  Tim Waugh  <twaugh@redhat.com>

	* PPD/Brother/BR5250_2_GPL.ppd: Added IEEE 1284 information (RH
	  bug #221121).

2006-12-19  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/drv_z42.xml: Marked this driver as obsolete, as Gutenprint
	  replaces it completely.

	* driver/gutenprint.xml: Updated printer list from last Gutenprint
	  package, added Lexmark X73 and Compaq IJ1200.

	* printer/Lexmark-X73.xml, printer/Lexmark-Z43.xml,
	  printer/Compaq-IJ1200.xml: Set recommended driver to
	  "gutenprint", text updates.

2006-12-18  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/hl7x0.xml, opt/hl7x0-EconomyMode.xml,
	  opt/hl7x0-InputSlot.xml, opt/hl7x0-MediaType.xml: Fixes of the
	  new options for the "hl7x0" driver after testing on a real
	  Brother printer.

2006-12-14  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/hl7x0.xml, opt/hl7x0-Duplex.xml,
	  opt/hl7x0-EconomyMode.xml, opt/hl7x0-InputSlot.xml,
	  opt/hl7x0-MediaType.xml, opt/hl7x0-PIN.xml,
	  opt/hl7x0-Resolution.xml: Added advanced options to the "hl7x0"
	  (Brother host-based printing) driver.

2006-12-13  Tim Waugh  <twaugh@redhat.com>

	* printer/Epson-EPL-6200L.xml: Fixed IEEE 1284 information (RH
	  bug #170373) by inserting 'usb' node.

	* printer/Okidata-Okipage_10e.xml: Added IEEE 1284 information (RH
	  bug #188762).

2006-12-12  Tim Waugh  <twaugh@redhat.com>

	* printer/Ricoh-Aficio_CL7200.xml: Added SNMP information (RH
	  bug #187387).

	* printer/Epson-Stylus_Photo_895.xml: Added IEEE 1284 info (RH
	  bug #191504).

	* printer/HP-OfficeJet_7300.xml: Added IEEE 1284 information (RH
	  bug #198999).

2006-12-11  Tim Waugh  <twaugh@redhat.com>

	* printer/HP-DeskJet_6122.xml: Added IEEE 1284 information (RH
	  bug #191661).

2006-12-05  Tim Waugh  <twaugh@redhat.com>

	* printer/HP-LaserJet_3200.xml: Added IEEE 1284 information (RH
	  bug #214037).

2006-11-29  Tim Waugh  <twaugh@redhat.com>

	* printer/HP-LaserJet_1160.xml: Added IEEE 1284 information (RH