@@ -21,7 +21,10 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <snmp>
+      <description>Canon GP300-405PSPCL</description>
+    </snmp>
+  </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver><!--verified--><!--no "contrib_url"-->
   <comments>
