@@ -1,3 +1,7 @@
+2007-01-03  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/Canon-GP_405.xml: Added SNMP information (RH bug #214801).
+
 2007-01-02  Tim Waugh  <twaugh@redhat.com>
 
 	* PPD/Brother/BR5250_2_GPL.ppd: Added IEEE 1284 information (RH
